Temporary Workings, needed to have a list profiles and edit profile page
Will try to get rid of the need for a show profile page

--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -12,7 +12,7 @@
   ],
 
   "defaultUsers": [
-    { "name": "John John", "profilePicture": "test", "scholarClasses": "ICS 314", "studentClasses": "ICS 414" },
-    { "name": "Man Man", "profilePicture": "temp", "scholarClasses": "ICS 414", "studentClasses": "ICS 514" }
+    { "name": "John John", "profilePicture": "test", "scholarClasses": "ICS 314", "studentClasses": "ICS 414", "owner": "admin@foo.com" },
+    { "name": "Man Man", "profilePicture": "temp", "scholarClasses": "ICS 414", "studentClasses": "ICS 514", "owner": "admin@foo.com" }
   ]
 }
