added a student and course collection

--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -10,38 +10,48 @@
     { "name": "Banana", "quantity": 2, "owner": "admin@foo.com", "condition": "good" },
     { "name": "Boogie Board", "quantity": 2, "owner": "admin@foo.com", "condition": "excellent" }
   ],
-
-  "defaultClass": [
-  { "className": "ICS 101: Tools for the Information Age", "professors": "John Doe", "students": ["Alice", "Bob", "Charlie"], "tutors": ["Eve", "Frank"] },
-  { "className": "ICS 110: Introduction to Computer Programming", "professors": "Jane Smith", "students": ["Grace", "Henry", "Isabel"], "tutors": ["Katherine", "Louis"] },
-  { "className": "ICS 111: Introduction to Computer Science I", "professors": "Alex Johnson", "students": ["Olivia", "Peter", "Rachel"], "tutors": ["Sam", "Tina"] },
-  { "className": "ICS 141: Discrete Mathematics for Computer Science I", "professors": "Michael Brown", "students": ["Sophia", "David", "Emma"], "tutors": ["Nathan", "Lily"] },
-  { "className": "ICS 210: Information Systems in Society", "professors": "Laura White", "students": ["Ella", "Logan", "Mia"], "tutors": ["Noah", "Sophie"] },
-  { "className": "ICS 211: Introduction to Computer Science II", "professors": "William Turner", "students": ["Ava", "Daniel", "James"], "tutors": ["Mia", "Jacob"] },
-  { "className": "ICS 212: Program Structure", "professors": "Sophia Garcia", "students": ["Liam", "Lily", "Lucas"], "tutors": ["Emma", "Olivia"] },
-  { "className": "ICS 215: Introduction to Scripting", "professors": "Oliver Davis", "students": ["Benjamin", "Charlotte", "Chloe"], "tutors": ["Ethan", "Emily"] },
-  { "className": "ICS 222: Basic Concepts of Computer Science", "professors": "Logan Miller", "students": ["Ethan", "Emma", "Ella"], "tutors": ["Liam", "Lily"] },
-  { "className": "ICS 241: Discrete Mathematics for Computer Science II", "professors": "Chloe Brown", "students": ["Emily", "Ethan", "Ella"], "tutors": ["Lucas", "Lily"] },
-  { "className": "ICS 290: Computer Science Careers: An Exploration of the Specialties of Computer Science", "professors": "Lucas Wilson", "students": ["Olivia", "Oscar", "Oliver"], "tutors": ["Sophie", "Sophia"] },
-  { "className": "ICS 311: Algorithms", "professors": "Ella Martinez", "students": ["Chloe", "Charlie", "Charlotte"], "tutors": ["Benjamin", "Bob"] },
-  { "className": "ICS 312: Machine-Level and Systems Programming", "professors": "Oscar Johnson", "students": ["Liam", "Lucas", "Lily"], "tutors": ["Logan", "Laura"] },
-  { "className": "ICS 313: Programming Language Theory", "professors": "Emma White", "students": ["Emily", "Ethan", "Ella"], "tutors": ["Chloe", "Charlie"] },
-  { "className": "ICS 314: Software Engineering I", "professors": "Benjamin Davis", "students": ["Sophie", "Sophia", "Sam"], "tutors": ["Ella", "Ethan"] },
-  { "className": "ICS 315: Web Design and Management", "professors": "Oscar Turner", "students": ["Oscar", "Oliver", "Olivia"], "tutors": ["Charlotte", "Chloe"] },
-  { "className": "ICS 321: Data Storage and Retrieval", "professors": "Ethan Miller", "students": ["Emily", "Ella", "Emma"], "tutors": ["Logan", "Lucas"] },
-  { "className": "ICS 331: Logic Design and Microprocessors", "professors": "Charlotte Garcia", "students": ["Charlie", "Chloe", "Chase"], "tutors": ["Sophia", "Sam"] },
-  { "className": "ICS 332: Operating Systems", "professors": "Charlie Davis", "students": ["Charlotte", "Chase", "Chloe"], "tutors": ["Chloe", "Charlie"] },
-  { "className": "ICS 351: Network Design and Management", "professors": "Chase White", "students": ["Sam", "Sophia", "Sophie"], "tutors": ["Oscar", "Olivia"] },
-  { "className": "ICS 355: Security and Trust I: Resource Protections", "professors": "Sam Turner", "students": ["Logan", "Laura", "Lily"], "tutors": ["Oscar", "Oliver"] },
-  { "className": "ICS 361: Introduction to Artificial Intelligence Programming", "professors": "Sophie Brown", "students": ["Oscar", "Oliver", "Olivia"], "tutors": ["Chloe", "Charlie"] },
-  { "className": "ICS 390: Computing Ethics for Lab Assistants", "professors": "Olivia Martinez", "students": ["Liam", "Lucas", "Lily"], "tutors": ["Emma", "Ethan"] },
-  { "className": "ICS 414: Software Engineering II", "professors": "Oscar Johnson", "students": ["Ella", "Ethan", "Emma"], "tutors": ["Liam", "Lucas"] },
-  { "className": "ICS 415: Introduction to Programming for the Web", "professors": "Chloe Brown", "students": ["Benjamin", "Bob", "Charlotte"], "tutors": ["Oliver", "Olivia"] },
-  { "className": "ICS 419: The Science, Psychology and Philosophy of Systems Design", "professors": "Benjamin Davis", "students": ["Sophie", "Sophia", "Sam"], "tutors": ["Ella", "Ethan"] },
-  { "className": "ICS 421: Database Systems", "professors": "Ethan Miller", "students": ["Emily", "Ella", "Emma"], "tutors": ["Logan", "Lucas"] },
-  { "className": "ICS 422: Data Processing", "professors": "Charlotte Garcia", "students": ["Charlie", "Chloe", "Chase"], "tutors": ["Sophia", "Sam"] },
-  { "className": "ICS 423: Data Security and Cryptography I", "professors": "Charlie Davis", "students": ["Charlotte", "Chase", "Chloe"], "tutors": ["Chloe", "Charlie"] },
-  { "className": "ICS 424: Application Frameworks", "professors": "Chase White", "students": ["Sam", "Sophia"], "tutors": ["Chloe", "Charlie"] }
+  "defaultCourse": [
+    { "courseCode": "ICS 101", "courseName": "Tools for the Information Age", "professors": "John Doe" },
+    { "courseCode": "ICS 110", "courseName": "Introduction to Computer Programming", "professors": "Jane Smith" },
+    { "courseCode": "ICS 111", "courseName": "Introduction to Computer Science I", "professors": "Alex Johnson" },
+    { "courseCode": "ICS 141", "courseName": "Discrete Mathematics for Computer Science I", "professors": "Michael Brown" },
+    { "courseCode": "ICS 210", "courseName": "Information Systems in Society", "professors": "Laura White" },
+    { "courseCode": "ICS 211", "courseName": "Introduction to Computer Science II", "professors": "William Turner" },
+    { "courseCode": "ICS 212", "courseName": "Program Structure", "professors": "Sophia Garcia" },
+    { "courseCode": "ICS 215", "courseName": "Introduction to Scripting", "professors": "Oliver Davis" },
+    { "courseCode": "ICS 222", "courseName": "Basic Concepts of Computer Science", "professors": "Logan Miller" },
+    { "courseCode": "ICS 241", "courseName": "Discrete Mathematics for Computer Science II", "professors": "Chloe Brown" },
+    { "courseCode": "ICS 290", "courseName": "Computer Science Careers: An Exploration of the Specialties of Computer Science", "professors": "Lucas Wilson" },
+    { "courseCode": "ICS 311", "courseName": "Algorithms", "professors": "Ella Martinez" },
+    { "courseCode": "ICS 312", "courseName": "Machine-Level and Systems Programming", "professors": "Oscar Johnson" },
+    { "courseCode": "ICS 313", "courseName": "Programming Language Theory", "professors": "Emma White" },
+    { "courseCode": "ICS 314", "courseName": "Software Engineering I", "professors": "Benjamin Davis" },
+    { "courseCode": "ICS 315", "courseName": "Web Design and Management", "professors": "Oscar Turner" },
+    { "courseCode": "ICS 321", "courseName": "Data Storage and Retrieval", "professors": "Ethan Miller" },
+    { "courseCode": "ICS 331", "courseName": "Logic Design and Microprocessors", "professors": "Charlotte Garcia" },
+    { "courseCode": "ICS 332", "courseName": "Operating Systems", "professors": "Charlie Davis" },
+    { "courseCode": "ICS 351", "courseName": "Network Design and Management", "professors": "Chase White" },
+    { "courseCode": "ICS 355", "courseName": "Security and Trust I: Resource Protections", "professors": "Sam Turner" },
+    { "courseCode": "ICS 361", "courseName": "Introduction to Artificial Intelligence Programming", "professors": "Sophie Brown" },
+    { "courseCode": "ICS 390", "courseName": "Computing Ethics for Lab Assistants", "professors": "Olivia Martinez" },
+    { "courseCode": "ICS 414", "courseName": "Software Engineering II", "professors": "Oscar Johnson" },
+    { "courseCode": "ICS 415", "courseName": "Introduction to Programming for the Web", "professors": "Chloe Brown" },
+    { "courseCode": "ICS 419", "courseName": "The Science, Psychology and Philosophy of Systems Design", "professors": "Benjamin Davis" },
+    { "courseCode": "ICS 421", "courseName": "Database Systems", "professors": "Ethan Miller" },
+    { "courseCode": "ICS 422", "courseName": "Data Processing", "professors": "Charlotte Garcia" },
+    { "courseCode": "ICS 423", "courseName": "Data Security and Cryptography I", "professors": "Charlie Davis" },
+    { "courseCode": "ICS 424", "courseName": "Application Frameworks", "professors": "Chase White" }
+  ],
+  "defaultStudents": [
+    { "firstName": "Alice", "lastName": "Johnson", "username": "alice123", "picture": "" },
+    { "firstName": "Bob", "lastName": "Smith", "username": "bob456", "picture": "" },
+    { "firstName": "Charlie", "lastName": "Davis", "username": "charlie789", "picture": "" },
+    { "firstName": "Grace", "lastName": "Miller", "username": "grace101", "picture": "" },
+    { "firstName": "Henry", "lastName": "Turner", "username": "henry202", "picture": "" },
+    { "firstName": "Isabel", "lastName": "Brown", "username": "isabel303", "picture": "" },
+    { "firstName": "Olivia", "lastName": "Garcia", "username": "olivia404", "picture": "" },
+    { "firstName": "Peter", "lastName": "White", "username": "peter505", "picture": "" },
+    { "firstName": "Rachel", "lastName": "Martinez", "username": "rachel606", "picture": "" },
+    { "firstName": "Sophia", "lastName": "Turner", "username": "sophia707", "picture": "" }
   ]
-
 }
