finished implementing student and course collections

--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -10,48 +10,49 @@
     { "name": "Banana", "quantity": 2, "owner": "admin@foo.com", "condition": "good" },
     { "name": "Boogie Board", "quantity": 2, "owner": "admin@foo.com", "condition": "excellent" }
   ],
-  "defaultCourse": [
-    { "courseCode": "ICS 101", "courseName": "Tools for the Information Age", "professors": "John Doe" },
-    { "courseCode": "ICS 110", "courseName": "Introduction to Computer Programming", "professors": "Jane Smith" },
-    { "courseCode": "ICS 111", "courseName": "Introduction to Computer Science I", "professors": "Alex Johnson" },
-    { "courseCode": "ICS 141", "courseName": "Discrete Mathematics for Computer Science I", "professors": "Michael Brown" },
-    { "courseCode": "ICS 210", "courseName": "Information Systems in Society", "professors": "Laura White" },
-    { "courseCode": "ICS 211", "courseName": "Introduction to Computer Science II", "professors": "William Turner" },
-    { "courseCode": "ICS 212", "courseName": "Program Structure", "professors": "Sophia Garcia" },
-    { "courseCode": "ICS 215", "courseName": "Introduction to Scripting", "professors": "Oliver Davis" },
-    { "courseCode": "ICS 222", "courseName": "Basic Concepts of Computer Science", "professors": "Logan Miller" },
-    { "courseCode": "ICS 241", "courseName": "Discrete Mathematics for Computer Science II", "professors": "Chloe Brown" },
-    { "courseCode": "ICS 290", "courseName": "Computer Science Careers: An Exploration of the Specialties of Computer Science", "professors": "Lucas Wilson" },
-    { "courseCode": "ICS 311", "courseName": "Algorithms", "professors": "Ella Martinez" },
-    { "courseCode": "ICS 312", "courseName": "Machine-Level and Systems Programming", "professors": "Oscar Johnson" },
-    { "courseCode": "ICS 313", "courseName": "Programming Language Theory", "professors": "Emma White" },
-    { "courseCode": "ICS 314", "courseName": "Software Engineering I", "professors": "Benjamin Davis" },
-    { "courseCode": "ICS 315", "courseName": "Web Design and Management", "professors": "Oscar Turner" },
-    { "courseCode": "ICS 321", "courseName": "Data Storage and Retrieval", "professors": "Ethan Miller" },
-    { "courseCode": "ICS 331", "courseName": "Logic Design and Microprocessors", "professors": "Charlotte Garcia" },
-    { "courseCode": "ICS 332", "courseName": "Operating Systems", "professors": "Charlie Davis" },
-    { "courseCode": "ICS 351", "courseName": "Network Design and Management", "professors": "Chase White" },
-    { "courseCode": "ICS 355", "courseName": "Security and Trust I: Resource Protections", "professors": "Sam Turner" },
-    { "courseCode": "ICS 361", "courseName": "Introduction to Artificial Intelligence Programming", "professors": "Sophie Brown" },
-    { "courseCode": "ICS 390", "courseName": "Computing Ethics for Lab Assistants", "professors": "Olivia Martinez" },
-    { "courseCode": "ICS 414", "courseName": "Software Engineering II", "professors": "Oscar Johnson" },
-    { "courseCode": "ICS 415", "courseName": "Introduction to Programming for the Web", "professors": "Chloe Brown" },
-    { "courseCode": "ICS 419", "courseName": "The Science, Psychology and Philosophy of Systems Design", "professors": "Benjamin Davis" },
-    { "courseCode": "ICS 421", "courseName": "Database Systems", "professors": "Ethan Miller" },
-    { "courseCode": "ICS 422", "courseName": "Data Processing", "professors": "Charlotte Garcia" },
-    { "courseCode": "ICS 423", "courseName": "Data Security and Cryptography I", "professors": "Charlie Davis" },
-    { "courseCode": "ICS 424", "courseName": "Application Frameworks", "professors": "Chase White" }
+  "defaultCourses": [
+    { "courseCode": "ICS 101", "courseName": "Tools for the Information Age", "teacher": "John Doe" },
+    { "courseCode": "ICS 110", "courseName": "Introduction to Computer Programming", "teacher": "Jane Smith" },
+    { "courseCode": "ICS 111", "courseName": "Introduction to Computer Science I", "teacher": "Alex Johnson" },
+    { "courseCode": "ICS 141", "courseName": "Discrete Mathematics for Computer Science I", "teacher": "Michael Brown" },
+    { "courseCode": "ICS 210", "courseName": "Information Systems in Society", "teacher": "Laura White" },
+    { "courseCode": "ICS 211", "courseName": "Introduction to Computer Science II", "teacher": "William Turner" },
+    { "courseCode": "ICS 212", "courseName": "Program Structure", "teacher": "Sophia Garcia" },
+    { "courseCode": "ICS 215", "courseName": "Introduction to Scripting", "teacher": "Oliver Davis" },
+    { "courseCode": "ICS 222", "courseName": "Basic Concepts of Computer Science", "teacher": "Logan Miller" },
+    { "courseCode": "ICS 241", "courseName": "Discrete Mathematics for Computer Science II", "teacher": "Chloe Brown" },
+    { "courseCode": "ICS 290", "courseName": "Computer Science Careers: An Exploration of the Specialties of Computer Science", "teacher": "Lucas Wilson" },
+    { "courseCode": "ICS 311", "courseName": "Algorithms", "teacher": "Ella Martinez" },
+    { "courseCode": "ICS 312", "courseName": "Machine-Level and Systems Programming", "teacher": "Oscar Johnson" },
+    { "courseCode": "ICS 313", "courseName": "Programming Language Theory", "teacher": "Emma White" },
+    { "courseCode": "ICS 314", "courseName": "Software Engineering I", "teacher": "Benjamin Davis" },
+    { "courseCode": "ICS 315", "courseName": "Web Design and Management", "teacher": "Oscar Turner" },
+    { "courseCode": "ICS 321", "courseName": "Data Storage and Retrieval", "teacher": "Ethan Miller" },
+    { "courseCode": "ICS 331", "courseName": "Logic Design and Microprocessors", "teacher": "Charlotte Garcia" },
+    { "courseCode": "ICS 332", "courseName": "Operating Systems", "teacher": "Charlie Davis" },
+    { "courseCode": "ICS 351", "courseName": "Network Design and Management", "teacher": "Chase White" },
+    { "courseCode": "ICS 355", "courseName": "Security and Trust I: Resource Protections", "teacher": "Sam Turner" },
+    { "courseCode": "ICS 361", "courseName": "Introduction to Artificial Intelligence Programming", "teacher": "Sophie Brown" },
+    { "courseCode": "ICS 390", "courseName": "Computing Ethics for Lab Assistants", "teacher": "Olivia Martinez" },
+    { "courseCode": "ICS 414", "courseName": "Software Engineering II", "teacher": "Oscar Johnson" },
+    { "courseCode": "ICS 415", "courseName": "Introduction to Programming for the Web", "teacher": "Chloe Brown" },
+    { "courseCode": "ICS 419", "courseName": "The Science, Psychology and Philosophy of Systems Design", "teacher": "Benjamin Davis" },
+    { "courseCode": "ICS 421", "courseName": "Database Systems", "teacher": "Ethan Miller" },
+    { "courseCode": "ICS 422", "courseName": "Data Processing", "teacher": "Charlotte Garcia" },
+    { "courseCode": "ICS 423", "courseName": "Data Security and Cryptography I", "teacher": "Charlie Davis" },
+    { "courseCode": "ICS 424", "courseName": "Application Frameworks", "teacher": "Chase White" }
   ],
   "defaultStudents": [
-    { "firstName": "Alice", "lastName": "Johnson", "username": "alice123", "picture": "" },
-    { "firstName": "Bob", "lastName": "Smith", "username": "bob456", "picture": "" },
-    { "firstName": "Charlie", "lastName": "Davis", "username": "charlie789", "picture": "" },
-    { "firstName": "Grace", "lastName": "Miller", "username": "grace101", "picture": "" },
-    { "firstName": "Henry", "lastName": "Turner", "username": "henry202", "picture": "" },
-    { "firstName": "Isabel", "lastName": "Brown", "username": "isabel303", "picture": "" },
-    { "firstName": "Olivia", "lastName": "Garcia", "username": "olivia404", "picture": "" },
-    { "firstName": "Peter", "lastName": "White", "username": "peter505", "picture": "" },
-    { "firstName": "Rachel", "lastName": "Martinez", "username": "rachel606", "picture": "" },
-    { "firstName": "Sophia", "lastName": "Turner", "username": "sophia707", "picture": "" }
+    { "firstName": "Alice", "lastName": "Johnson", "username": "alice123", "profilePicture": "https://upload.wikimedia.org/wikipedia/commons/3/35/Basic_human_drawing.png", "owner": "john@foo.com" },
+    { "firstName": "Bob", "lastName": "Smith", "username": "bob456", "profilePicture": "https://upload.wikimedia.org/wikipedia/commons/3/35/Basic_human_drawing.png", "owner": "john@foo.com" },
+    { "firstName": "Charlie", "lastName": "Davis", "username": "charlie789", "profilePicture": "https://upload.wikimedia.org/wikipedia/commons/3/35/Basic_human_drawing.png", "owner": "john@foo.com" },
+    { "firstName": "Grace", "lastName": "Miller", "username": "grace101", "profilePicture": "https://upload.wikimedia.org/wikipedia/commons/3/35/Basic_human_drawing.png", "owner": "john@foo.com" },
+    { "firstName": "Henry", "lastName": "Turner", "username": "henry202", "profilePicture": "https://upload.wikimedia.org/wikipedia/commons/3/35/Basic_human_drawing.png", "owner": "john@foo.com" },
+    { "firstName": "Isabel", "lastName": "Brown", "username": "isabel303", "profilePicture": "https://upload.wikimedia.org/wikipedia/commons/3/35/Basic_human_drawing.png", "owner": "john@foo.com" },
+    { "firstName": "Olivia", "lastName": "Garcia", "username": "olivia404", "profilePicture": "https://upload.wikimedia.org/wikipedia/commons/3/35/Basic_human_drawing.png", "owner": "john@foo.com" },
+    { "firstName": "Peter", "lastName": "White", "username": "peter505", "profilePicture": "https://upload.wikimedia.org/wikipedia/commons/3/35/Basic_human_drawing.png", "owner": "john@foo.com" },
+    { "firstName": "Rachel", "lastName": "Martinez", "username": "rachel606", "profilePicture": "https://upload.wikimedia.org/wikipedia/commons/3/35/Basic_human_drawing.png", "owner": "john@foo.com" },
+    { "firstName": "Sophia", "lastName": "Turner", "username": "sophia707", "profilePicture": "https://upload.wikimedia.org/wikipedia/commons/3/35/Basic_human_drawing.png", "owner": "john@foo.com" }
   ]
+
 }
